--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,13 @@
 name = "heckorator"
 version = "0.1.0"
 description = "the most readable decorators you've ever seen"
-authors = ["RocketRace <oliviaspalmu@gmail.com>"]
+authors = []
 license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.9"
+python = ">=3.12"
+bdfparser = "^2.2.0"
 
 [build-system]
 requires = ["poetry-core"]
