--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [tool.poetry]
 name = "heckorator"
-version = "0.1.2"
+version = "0.1.3"
 description = "the most readable decorators you've ever seen"
 authors = []
 license = "MIT"
 readme = "README.md"
+repository = "https://github.com/RocketRace/heckorator"
 
 [tool.poetry.dependencies]
 python = ">=3.12"
