--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "heckorator"
-version = "0.1.4"
+version = "0.1.5"
 description = "the most readable decorators you've ever seen"
-authors = ["RocketRace <oliviaspalmu@gmail.com>"]
+authors = ["RocketRace <hiemankaranteenissa@proton.me>"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/RocketRace/heckorator"
